# gar

./: .env.example  .gitignore  .mcp.json.example  CLAUDE.md  LICENSE  README.md  plan.md  pyproject.toml  spec.md
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/src/gar_backend/: auth.py  cli.py  main.py  secrets.py  settings.py
backend/src/gar_backend/agent/: llm.py  loop.py  prompts.py  tools.py
backend/src/gar_backend/api/: access.py  agent_wiring.py  auth.py  deps.py  gates.py  runs.py  segments.py  stream.py
backend/src/gar_backend/governance/: audit.py  grounding.py  hitl.py  rbac.py
backend/src/gar_backend/ideas/: reader.py  search.py  walker.py
backend/src/gar_backend/mcp_server/: client.py  models.py  server.py  tools.py
backend/src/gar_backend/reports/: builder.py  linkify.py  naming.py
backend/src/gar_backend/retrieval/: directions.py  embedding.py  recall.py  rerank.py
backend/src/gar_backend/sources/: arxiv.py  base.py  web_search.py
backend/src/gar_backend/state/: checkpoints.py  runs.py
backend/tests/: conftest.py  test_auth.py  test_cli.py  test_llm_provider.py  test_secrets.py  test_smoke.py
backend/tests/agent/: test_llm.py  test_loop.py  test_tools.py
backend/tests/api/: conftest.py  test_access.py  test_activity.py  test_audit_client.py  test_audit_sink_selection.py  test_back.py  test_gates.py  test_lambda_handler.py  test_owner_scoping.py  test_runs.py  test_segments.py  test_sessions.py  test_stream.py
backend/tests/governance/: test_audit.py  test_grounding.py  test_hitl.py  test_rbac.py  test_s3_audit_sink.py
backend/tests/ideas/: test_reader.py  test_search.py  test_walker.py
backend/tests/mcp_server/: conftest.py  test_client.py  test_registry.py  test_tools.py
backend/tests/reports/: test_builder.py  test_linkify.py  test_naming.py
backend/tests/retrieval/: test_directions.py  test_embedding.py  test_recall.py  test_rerank.py
backend/tests/sources/: test_arxiv.py  test_base.py
backend/tests/state/: test_dynamodb_runstore.py  test_make_run_store.py  test_runs.py
docs/: deploy.md  design-and-implementation-v1.md  mcp.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: Stepper.tsx  ThemeToggle.tsx
frontend/src/lib/: api.ts  auth.ts  config.ts  download.ts  poll.ts  runtimeConfig.ts  sse.ts  theme.ts
frontend/src/styles/: tokens.css
frontend/src/views/: Activity.tsx  Completed.tsx  ConceptReview.tsx  FinalReport.tsx  Login.tsx  Processing.tsx  SessionList.tsx  SourceSelection.tsx  Start.tsx
infra/: app.py  cdk.json  pyproject.toml
infra/stacks/: auth_stack.py  backend_stack.py  data_stack.py  frontend_stack.py  workflow_stack.py
scripts/: gar-mcp.sh  print-mcp-config.sh  run-backend.sh
