[project]
name = "gar"
version = "0.1.0"
description = "Governed Agentic Retrieval for prior-art survey"
readme = "README.md"
requires-python = ">=3.14"

[tool.uv.workspace]
members = ["backend", "infra"]

# Ruff config applies to the whole workspace (backend + infra).
# Ruff is added as a dev dep on gar-backend; running it via
# `uv run --package gar-backend ruff …` resolves the binary.
[tool.ruff]
target-version = "py314"
line-length = 88
extend-exclude = ["cdk.out", ".venv"]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade,
# B: bugbear, SIM: simplify, RUF: ruff-native.
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",   # line length — formatter handles the obvious cases
    "B008",   # FastAPI's Depends(...) in defaults is idiomatic
]

[tool.ruff.lint.per-file-ignores]
"backend/tests/**" = ["B017"]   # pytest.raises(Exception) is fine in tests

