[project]
name = "gar-backend"
version = "0.1.0"
description = "Backend for Governed Agentic Retrieval"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "pathspec",
    "anthropic",
    "python-dotenv",
]

[project.scripts]
gar = "gar_backend.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff>=0.15.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gar_backend"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
