[project]
name = "gar-backend"
version = "2.1.0"
description = "Backend for Governed Agentic Retrieval"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "pathspec",
    "anthropic",
    "python-dotenv",
    "mcp>=1.27.2",
    "boto3>=1.43.33",
    "mangum>=0.21.0",
    "pyjwt[crypto]>=2.10.1",
]

[project.scripts]
gar = "gar_backend.cli:main"
gar-mcp = "gar_backend.mcp_server.server:main"

[dependency-groups]
dev = [
    "moto[dynamodb]>=5.2.2",
    "pytest",
    "pytest-asyncio",
    "ruff>=0.15.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gar_backend"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
